# cpp-db-engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
ci/: README.md
docs/: DESIGN.md  HASHING.md  QUERY.md  STORAGE.md
examples/: README.md  hello.cpp
new_db/: CMakeLists.txt  Defines.pri  new_db.h  new_db.pro  new_dbext.h
new_db-tests/: CMakeLists.txt  catch.hpp  datatypes-tests.cpp  dbmanagement-tests.cpp  encodedvalue-tests.cpp  hashedvalue-tests.cpp  hashing-tests.cpp  key-tests.cpp  keyvalue-bug-tests.cpp  keyvalue-tests.cpp  new_db-tests.pro  performance-tests.cpp  query-tests.cpp
new_db/include/: database.h  hashes.h  is_container.h  new_db.h  query.h  types.h
new_db/include/extensions/: extdatabase.h  extquery.h  highwayhash.h
new_db/src/: database.cpp  filekeyvaluestore.cpp  hashes.cpp  highwayhash.cpp  memorykeyvaluestore.cpp  new_db.cpp  query.cpp  types.cpp
scripts/: bench.sh  test.sh
tools/: db-inspect.py
